--- a/tabela.html
+++ b/tabela.html
@@ -5,13 +5,24 @@
 </head>
 <body>
     <table>
-        <tr>
-            <td>feijão</td>
-            <td>joão</td>
-            <td>anão</td>
-            <td>vacilão</td>
-            <td>bobão</td>
-        </tr>
+      <p>  <tr>
+            <td>id</td>
+            <td>produto</td>
+            <td>preço</td>
+        </tr> </p>
+        <p> <tr><td>1</td>
+            <td>cpu</td>
+            <td>700$</td>
+          </tr> </p>
+        <p>  <tr><td>2</td>
+            <td>m.ram</td>
+            <td>15$</td>
+            </tr> </p>
+        <p>    <tr><td>3</td>
+                <td>mouse</td>
+                <td>75$</td>
+                </tr> </p>
+        
     </table>
     
 </body>
